Small formatting changes
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/album3x/trunk@14957 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-16  Dmitry Dulepov  <dmitry@ typo3.org>
+
+	* Small formatting changes
+
 2007-12-18 Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug: possible error about undefined classes t3lib_refindex and t3lib_BEfunc
